OTP-888 Refactor mobilityProfile into its own object
